feat: add multi environment flink app for process